--- a/ui/storefront/Views/About/Index.cshtml
+++ b/ui/storefront/Views/About/Index.cshtml
@@ -22,10 +22,10 @@
                 </div>
                 <div class="hidden xl:flex flex-row justify-center items-center space-x-6 xl:space-x-8">
                     <div>
-                        <img loading="lazy" src="/imgs/about/camilla-carvalho.png" alt="jewellery"/>
+                        <img asp-append-version="true" loading="lazy" src="/imgs/about/camilla-carvalho.png" alt="jewellery"/>
                     </div>
                     <div>
-                        <img loading="lazy" src="/imgs/about/jonathan-francisca.png" alt="watch"/>
+                        <img asp-append-version="true" loading="lazy" src="/imgs/about/jonathan-francisca.png" alt="watch"/>
                     </div>
                 </div>
             </div>
