--- a/ui/storefront/Areas/Product/Views/Product/Index.cshtml
+++ b/ui/storefront/Areas/Product/Views/Product/Index.cshtml
@@ -26,7 +26,7 @@ else
                 {
                     <div class="group relative">
                         <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                            <img asp-append-version="true" loading="lazy" src="@(product.ImageUrl ?? "~/imgs/product/default-preview-image.png")" alt="@product.Name" class="h-full w-full lg:h-full lg:w-full">
+                            <img asp-append-version="true" loading="lazy" src="@(product.ImageUrl ?? "~/imgs/product/default-preview-image.png")" alt="@product.Name" class="h-full w-full lg:h-full lg:w-full object-cover object-center">
                         </div>
                         <div class="mt-4 flex justify-between">
                             <div>
