--- a/ui/storefront/Areas/Basket/Views/Basket/Index.cshtml
+++ b/ui/storefront/Areas/Basket/Views/Basket/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@using System.Globalization
-@model RookieShop.Storefront.Areas.Basket.Models.BasketViewModel
+@model RookieShop.Storefront.Areas.Basket.Models.BasketViewModel?
 
 @{
     ViewBag.Title = "My Basket";
     Layout = "~/Views/Shared/_layout.cshtml";
 }
 
-@if (Model.BasketDetails.Any())
+@if (Model is not null)
 {
     <section class="relative z-10 after:contents-[''] after:absolute after:z-0 after:h-full xl:after:w-1/3 after:top-0 after:right-0 after:bg-gray-50">
         <div class="w-full max-w-7xl px-4 md:px-5 lg-6 mx-auto relative z-10">
