fix: storefront performance

--- a/ui/storefront/Views/Shared/_Layout.cshtml
+++ b/ui/storefront/Views/Shared/_Layout.cshtml
@@ -62,7 +62,13 @@
                                 <img loading="lazy" src="~/imgs/home/account.svg" class="h-6 w-6" alt="Account" asp-append-version="true"/>
                             </a>
                         </li>
-                        @await Component.InvokeAsync("BasketButton")
+                        <li>
+                            <a asp-area="Basket" asp-controller="Basket" asp-action="Index" class="flex items-center space-x-2 justify-center py-4 pr-2">
+                                <div class="relative">
+                                    <img loading="lazy" class="mt-2 h-6 w-6" src="~/imgs/home/cart.svg" alt="Cart" asp-append-version="true"/>
+                                </div>
+                            </a>
+                        </li>
                         <li>
                             <a id="logout-btn" class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-4 py-2 text-center">Log Out</a>
                         </li>
